--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>Rhipe Concierge PH</title>
 </head>
 <body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 <script src="script.js"></script></body>
 </html>
