--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+<script src="http://extreme-ip-lookup.com/json/?callback=getIP" async defer></script>
 <script src="script.js"></script></body>
 </html>
