--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-<script src="//extreme-ip-lookup.com/json/?callback=getIP" async defer></script>
+<!--<script src="//extreme-ip-lookup.com/json/?callback=getIP" async defer></script>-->
 <script src="script.js"></script></body>
 </html>
