--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <title>Rhipe Concierge PH</title>
+<style>
+    .resp-container {
+        position: relative;
+        overflow: hidden;
+        padding-top: 56.25%;
+    }
+    
+    .resp-iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 0;
+    }
+    p {
+        margin-left: auto;
+        margin-right: auto;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-size: 36px;
+        font-weight: 700;
+    }
+</style>
 </head>
 <body>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-<script src="//extreme-ip-lookup.com/json/?callback=getIP" async defer></script>
+
+    <div id="powerapps" class="resp-container">
+            <iframe class="resp-iframe" src="https://web.powerapps.com/webplayer/iframeapp?source=website&screenColor=rgba(165,34,55,1)&appId=/providers/Microsoft.PowerApps/apps/0aadd047-2eb1-473a-b59a-443fe57cf257" allow="geolocation; microphone; camera" allowfullscreen/></iframe>
+    </div>   
+    
+    <p id="errorbox">   
+        Sorry, you should be inside the production area to access the site!
+    <p>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+<script src="http://extreme-ip-lookup.com/json/?callback=getIP" async defer></script>
 <script src="script.js"></script></body>
 </html>
