--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         Sorry, you should be inside the production area to access the site!
     <p>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-<script src="http://extreme-ip-lookup.com/json/?callback=getIP" async defer></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+<script src="//extreme-ip-lookup.com/json/?callback=getIP" async defer></script>
 <script src="script.js"></script></body>
 </html>
