--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <title>Rhipe Concierge PH</title>
+<link rel="icon" href="favicon.png">
 <style>
 html, body {
   background: #222f3e;
