--- a/error.html
+++ b/error.html
@@ -6,7 +6,7 @@
 <link rel="icon" href="favicon.png">
 <style>
 html, body {
-  background: #222f3e;
+  background: #e74c3c;
   width: 100%;
   height: 100%;
   padding: 0;
@@ -27,18 +27,18 @@ html, body {
     display: inline-block;
     vertical-align: middle;
 }
-iframe {
-    border: 0px;
+
+p {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 36px;
+    font-weight: 700;
+    color: white;
 }
 
 </style>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-<script src="//extreme-ip-lookup.com/json/?callback=getIP" async defer></script>
-<script src="script.js"></script></body>    
 </head>
 <body class="centered-wrapper">
-
-    <div id="powerapps" class="centered-content">
-            <iframe width="1366" height="768" src="https://web.powerapps.com/webplayer/iframeapp?source=website&screenColor=rgba(165,34,55,1)&appId=/providers/Microsoft.PowerApps/apps/0aadd047-2eb1-473a-b59a-443fe57cf257" allow="geolocation; microphone; camera" allowfullscreen/></iframe>
+    <div class="centered-content">
+        <p id="errorbox">Sorry, you should be inside the production area to access the site!<p>
     </div>   
 </html>
